# serializer version: 1
# name: test_all_entities[indoor][sensor.airgradient_carbon_dioxide-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_carbon_dioxide',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.CO2: 'carbon_dioxide'>,
    'original_icon': None,
    'original_name': 'Carbon dioxide',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-co2',
    'unit_of_measurement': 'ppm',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_carbon_dioxide-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'carbon_dioxide',
      'friendly_name': 'Airgradient Carbon dioxide',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ppm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_carbon_dioxide',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '778',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_carbon_dioxide_automatic_baseline_calibration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_carbon_dioxide_automatic_baseline_calibration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Carbon dioxide automatic baseline calibration',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'co2_automatic_baseline_calibration_days',
    'unique_id': '84fce612f5b8-co2_automatic_baseline_calibration_days',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_carbon_dioxide_automatic_baseline_calibration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Airgradient Carbon dioxide automatic baseline calibration',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_carbon_dioxide_automatic_baseline_calibration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_display_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_display_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Display brightness',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'display_brightness',
    'unique_id': '84fce612f5b8-display_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_display_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient Display brightness',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_display_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_display_pm_standard-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'ugm3',
        'us_aqi',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_display_pm_standard',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Display PM standard',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'display_pm_standard',
    'unique_id': '84fce612f5b8-display_pm_standard',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_display_pm_standard-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Airgradient Display PM standard',
      'options': list([
        'ugm3',
        'us_aqi',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_display_pm_standard',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'ugm3',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_display_temperature_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'c',
        'f',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_display_temperature_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Display temperature unit',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'display_temperature_unit',
    'unique_id': '84fce612f5b8-display_temperature_unit',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_display_temperature_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Airgradient Display temperature unit',
      'options': list([
        'c',
        'f',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_display_temperature_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'c',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_humidity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_humidity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.HUMIDITY: 'humidity'>,
    'original_icon': None,
    'original_name': 'Humidity',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-humidity',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_humidity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'humidity',
      'friendly_name': 'Airgradient Humidity',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_humidity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '47.0',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_led_bar_brightness-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_led_bar_brightness',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LED bar brightness',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'led_bar_brightness',
    'unique_id': '84fce612f5b8-led_bar_brightness',
    'unit_of_measurement': '%',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_led_bar_brightness-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient LED bar brightness',
      'unit_of_measurement': '%',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_led_bar_brightness',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '100',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_led_bar_mode-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'options': list([
        'off',
        'co2',
        'pm',
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_led_bar_mode',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'LED bar mode',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'led_bar_mode',
    'unique_id': '84fce612f5b8-led_bar_mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_led_bar_mode-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'enum',
      'friendly_name': 'Airgradient LED bar mode',
      'options': list([
        'off',
        'co2',
        'pm',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_led_bar_mode',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'co2',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_nox_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_nox_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NOx index',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'nitrogen_index',
    'unique_id': '84fce612f5b8-nitrogen_index',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_nox_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient NOx index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_nox_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_nox_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_nox_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'NOx index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'nox_learning_offset',
    'unique_id': '84fce612f5b8-nox_learning_offset',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_nox_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Airgradient NOx index learning offset',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_nox_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm0_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_pm0_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'PM0.3',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'pm003_count',
    'unique_id': '84fce612f5b8-pm003',
    'unit_of_measurement': 'particles/dL',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm0_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient PM0.3',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'particles/dL',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_pm0_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '270',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_pm1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM1: 'pm1'>,
    'original_icon': None,
    'original_name': 'PM1',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-pm01',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm1',
      'friendly_name': 'Airgradient PM1',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_pm1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm10-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_pm10',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM10: 'pm10'>,
    'original_icon': None,
    'original_name': 'PM10',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-pm10',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm10-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm10',
      'friendly_name': 'Airgradient PM10',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_pm10',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '41',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm2_5-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_pm2_5',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.PM25: 'pm25'>,
    'original_icon': None,
    'original_name': 'PM2.5',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-pm02',
    'unit_of_measurement': 'µg/m³',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_pm2_5-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'pm25',
      'friendly_name': 'Airgradient PM2.5',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'µg/m³',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_pm2_5',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '34',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_raw_nox-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_raw_nox',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Raw NOx',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'raw_nitrogen',
    'unique_id': '84fce612f5b8-nox_raw',
    'unit_of_measurement': 'ticks',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_raw_nox-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient Raw NOx',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ticks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_raw_nox',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16931',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_raw_voc-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_raw_voc',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Raw VOC',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'raw_total_volatile_organic_component',
    'unique_id': '84fce612f5b8-tvoc_raw',
    'unit_of_measurement': 'ticks',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_raw_voc-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient Raw VOC',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ticks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_raw_voc',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '31792',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_signal_strength-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_signal_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Signal strength',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-signal_strength',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_signal_strength-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Airgradient Signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_signal_strength',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-52',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_temperature-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_temperature',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Temperature',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-temperature',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_temperature-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'Airgradient Temperature',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_temperature',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '22.17',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_voc_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_voc_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VOC index',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_volatile_organic_component_index',
    'unique_id': '84fce612f5b8-tvoc',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_voc_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient VOC index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_voc_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '99',
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_voc_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_voc_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'VOC index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tvoc_learning_offset',
    'unique_id': '84fce612f5b8-tvoc_learning_offset',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[indoor][sensor.airgradient_voc_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Airgradient VOC index learning offset',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_voc_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_carbon_dioxide_automatic_baseline_calibration-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_carbon_dioxide_automatic_baseline_calibration',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'Carbon dioxide automatic baseline calibration',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'co2_automatic_baseline_calibration_days',
    'unique_id': '84fce612f5b8-co2_automatic_baseline_calibration_days',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_carbon_dioxide_automatic_baseline_calibration-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Airgradient Carbon dioxide automatic baseline calibration',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_carbon_dioxide_automatic_baseline_calibration',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '8',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_nox_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_nox_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'NOx index',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'nitrogen_index',
    'unique_id': '84fce612f5b8-nitrogen_index',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_nox_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient NOx index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_nox_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_nox_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_nox_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'NOx index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'nox_learning_offset',
    'unique_id': '84fce612f5b8-nox_learning_offset',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_nox_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Airgradient NOx index learning offset',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_nox_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_raw_nox-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_raw_nox',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Raw NOx',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'raw_nitrogen',
    'unique_id': '84fce612f5b8-nox_raw',
    'unit_of_measurement': 'ticks',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_raw_nox-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient Raw NOx',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ticks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_raw_nox',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '16359',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_raw_voc-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_raw_voc',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Raw VOC',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'raw_total_volatile_organic_component',
    'unique_id': '84fce612f5b8-tvoc_raw',
    'unit_of_measurement': 'ticks',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_raw_voc-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient Raw VOC',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'ticks',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_raw_voc',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30802',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_signal_strength-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_signal_strength',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.SIGNAL_STRENGTH: 'signal_strength'>,
    'original_icon': None,
    'original_name': 'Signal strength',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '84fce612f5b8-signal_strength',
    'unit_of_measurement': 'dBm',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_signal_strength-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'signal_strength',
      'friendly_name': 'Airgradient Signal strength',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      'unit_of_measurement': 'dBm',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_signal_strength',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-64',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_voc_index-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.airgradient_voc_index',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'VOC index',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'total_volatile_organic_component_index',
    'unique_id': '84fce612f5b8-tvoc',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_voc_index-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Airgradient VOC index',
      'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_voc_index',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '49',
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_voc_index_learning_offset-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
    'entity_id': 'sensor.airgradient_voc_index_learning_offset',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
    'original_icon': None,
    'original_name': 'VOC index learning offset',
    'platform': 'airgradient',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'tvoc_learning_offset',
    'unique_id': '84fce612f5b8-tvoc_learning_offset',
    'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
  })
# ---
# name: test_all_entities[outdoor][sensor.airgradient_voc_index_learning_offset-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'duration',
      'friendly_name': 'Airgradient VOC index learning offset',
      'unit_of_measurement': <UnitOfTime.DAYS: 'd'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.airgradient_voc_index_learning_offset',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '12',
  })
# ---
